k8s-example/k8s-deploy/roboger-service.yml
apiVersion: v1
kind: Service
metadata:
  name: roboger-svc
spec:
  selector:
    app: roboger
  ports:
    - name: default
      protocol: TCP
      port: 7719
      targetPort: 7719
  type: NodePort
